# jardy-coin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: block.cpp  block.hpp  chain.cpp  chain.hpp  crypto.cpp  crypto.hpp  main.cpp  network_manager.cpp  network_manager.hpp  node.cpp  node.hpp  serialization.hpp
